# jsge

./: .gitignore  CMakeLists.txt  README.md  build.sh  makeit.sh  tags
Mods/base/: manifest.json
dependencies/lib/v8/: libicui18n.dylib  libicuuc.dylib  libv8_libbase.dylib  libv8_libplatform.dylib
scripts/: build
src/: Entity.h  Game.cpp  Game.h  Game.hpp  Main.cpp  Mod.h  ModManager.cpp  ModManager.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  backup  test2
src/Entities/: Component.cpp  Component.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  System.cpp  System.h
src/Entities/Components/: TransformComponent.cpp  TransformComponent.h
src/Entities/Managers/: EntityManager.cpp  EntityManager.h  SystemManager.cpp  SystemManager.h
src/Globals/: Globals.cpp  Globals.h
src/Mods/: Mod.cpp  Mod.h  ModManager.cpp  ModManager.h
src/Utils/: FileUtils.cpp  FileUtils.h  Globals.cpp  Globals.h
